--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -1,3 +1,14 @@
+/**
+
+CMPT 370, T05, Team 4, Prof. Jon Lovering
+Author: Kara Leier, kjl061, 11293306
+Nathan Balilis, ncb421, 11295020
+Trushank Lakdawala, nus429, 11350445
+Jinny Kim, yek738, 11304174
+Sara Shakeel, gvk731, 11367521
+
+ **/
+
 .button {
     -fx-background-color: #b19f93;
     -fx-border-color: #b19f93;
@@ -20,9 +31,10 @@
 .cardsection {
     -fx-font-family: "Trebuchet MS", "Sans Serif Collection";
     -fx-font-size: 25px;
+    -fx-border-color: black;
 }
-.textflow{
+.fake{
     -fx-font-family: "Trebuchet MS", "Sans Serif Collection";
-    -fx-font-size: 25px;
-    -fx-alignment: center;
+    -fx-font-size: 15px;
+    -fx-border-color: black;
 }
