--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -31,10 +31,19 @@ Sara Shakeel, gvk731, 11367521
 .cardsection {
     -fx-font-family: "Trebuchet MS", "Sans Serif Collection";
     -fx-font-size: 25px;
-    -fx-border-color: black;
+    -fx-border-color: blue;
+    -fx-wrap-text: wrap;
+    -fx-spacing: 5;
 }
 .fake{
     -fx-font-family: "Trebuchet MS", "Sans Serif Collection";
     -fx-font-size: 15px;
     -fx-border-color: black;
+}
+.texflow {
+    -fx-border-color: purple;
+    -fx-padding: 10px;
+}
+.bigbox {
+    -fx-border-color: darkgreen;
 }
