Buttons on the side to select decks now available, buttons don't have function and aren't yet attached to real decks.

--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -48,3 +48,8 @@ Sara Shakeel, gvk731, 11367521
 .bigbox {
     -fx-border-color: darkgreen;
 }
+.deck {
+    -fx-border-color: orange;
+    -fx-padding: 15px;
+    -fx-font-size: 25px;
+}
