--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -41,9 +41,9 @@ Sara Shakeel, gvk731, 11367521
     -fx-padding: 15px;
 }
 .textflow {
-    -fx-border-color: purple;
     -fx-padding: 20px;
     -fx-font-size: 40px;
+    -fx-background-color: #a7acbd;
 }
 .bigbox {
     -fx-border-color: darkgreen;
