--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -57,3 +57,12 @@ Sara Shakeel, gvk731, 11367521
     -fx-start-margin: 0;
     -fx-end-margin: 0;
 }
+.grid {
+    -fx-padding: 15px;
+    -fx-spacing: 20px;
+    -fx-font-family: "Trebuchet MS", "Sans Serif Collection";
+    -fx-background-color: #eedfd6;
+}
+.editbutton {
+    -fx-font-size: 15px;
+}
