--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -31,8 +31,9 @@ Sara Shakeel, gvk731, 11367521
 .cardsection {
     -fx-font-family: "Trebuchet MS", "Sans Serif Collection";
     -fx-font-size: 25px;
-    -fx-border-color: blue;
     -fx-spacing: 5;
+    -fx-border-color: #482c0e;
+
 }
 .fake{
     -fx-font-family: "Trebuchet MS", "Sans Serif Collection";
@@ -44,12 +45,12 @@ Sara Shakeel, gvk731, 11367521
     -fx-padding: 20px;
     -fx-font-size: 40px;
     -fx-background-color: #a7acbd;
+    -fx-border-color: #482c0e;
 }
 .bigbox {
-    -fx-border-color: darkgreen;
+    -fx-border-color: #482c0e;
 }
 .deck {
-    -fx-border-color: orange;
     -fx-padding: 15px;
     -fx-font-size: 25px;
 }
