tasks turn red if they're past their due date or completed

--- a/src/main/resources/stylesToDoList.css
+++ b/src/main/resources/stylesToDoList.css
@@ -6,7 +6,7 @@
 }
 
 .label {
-    -fx-text-fill: purple; /* Change label text color to pink */
+    -fx-text-fill: black; /* Change label text color to pink */
 }
 
 .checkbox .check-box {
