--- a/src/main/resources/stylesToDoList.css
+++ b/src/main/resources/stylesToDoList.css
@@ -7,6 +7,7 @@
 
 .label {
     -fx-text-fill: purple; /* Change label text color to pink */
+    -fx-font-size: 15px;
 }
 
 .checkbox .check-box {
@@ -172,4 +173,20 @@
 
 .date-picker .calendar .day-cell:selected:hover {
     -fx-background-color: darkviolet; /* Darker purple when selected and hovered */
+}
+
+.xpbar {
+    -fx-background-color: #b19f93;
+    -fx-border-color: #b19f93;
+    -fx-border-radius: 5px;
+    -fx-font-weight: bold;
+    -fx-font-size: 25px;
+    -fx-font-family: "Trebuchet MS", "Sans Serif Collection";
+    -fx-padding: 10px;
+    -fx-alignment: center;
+}
+
+.rightVbox {
+    -fx-spacing: 10px;
+    -fx-alignment: center;
 }
