updates that were missed last commit

--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -16,6 +16,7 @@ Sara Shakeel, gvk731, 11367521
     -fx-font-weight: bold;
     -fx-font-size: 25px;
     -fx-font-family: "Trebuchet MS", "Sans Serif Collection";
+    -fx-text-fill: #ffffff;
 }
 .cardview {
     -fx-background-color: #eedfd6;
