set up functionality to switch decks from the json

--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -307,3 +307,6 @@ Sara Shakeel, gvk731, 11367521
     /*-fx-text-alignment: center;*/
     -fx-alignment: center;
 }
+.list-cell {
+    -fx-alignment: center;
+}
