--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -293,7 +293,6 @@ Sara Shakeel, gvk731, 11367521
     -fx-min-width: 40;
     -fx-max-height: 40;
     -fx-min-height: 40;
-    -fx-fill: purple;
 }
 .fontmenu {
     -fx-font-size: 15px;
@@ -315,4 +314,6 @@ Sara Shakeel, gvk731, 11367521
     -fx-alignment: center;
     -fx-padding: 10px;
     -fx-background-color: #ead0e4;
+    -fx-border-color: purple;
+    -fx-border-width: 2px;
 }
