--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -318,11 +318,12 @@ Sara Shakeel, gvk731, 11367521
 }
 .top-bar {
     -fx-background-color: #d9b3ff;
-    -fx-padding: 10px;
+    -fx-padding: 0px;
     -fx-border-color: #b58cd9;
     -fx-border-width: 0 0 2px 0;
     -fx-alignment: center-left;
-    -fx-spacing: 15px;
+    -fx-spacing: 30px;
+    -fx-max-height: 50px;
 }
 
 .folder-box {
@@ -341,4 +342,21 @@ Sara Shakeel, gvk731, 11367521
     -fx-background-color: #a89082; /* Lighter color on hover */
     -fx-border-color: #74695a;
 }
+.note-box{
+    -fx-padding: 5px;
+}
+.main-title-label{
+    -fx-font-family: "Trebuchet MS", "Sans Serif Collection";
+    -fx-font-size: 40px;
+    -fx-padding: 20px;
+}
+.bignotebox{
 
+    -fx-background-color: #d9b3ff;
+}
+.image-view {
+    -fx-border-color: #cccccc;
+    -fx-border-width: 2px;
+    -fx-padding: -40px;
+    -fx-scale-shape: 100px;
+}
