--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -394,12 +394,13 @@ Sara Shakeel, gvk731, 11367521
 }
 
 .add-folder-button {
-    -fx-background-color: #d0a9f5;
-    -fx-text-fill: white;
-    -fx-font-size: 14px;
-    -fx-padding: 10 20;
+    -fx-background-color: #b19f93;
+    -fx-border-color: #b19f93;
     -fx-border-radius: 5px;
-    -fx-background-radius: 5px;
+    -fx-font-weight: bold;
+    -fx-font-size: 20px;
+    -fx-font-family: "Trebuchet MS", "Sans Serif Collection";
+    -fx-text-fill: #ffffff;
 }
 
 .scroll-pane {
