--- a/src/main/resources/styles.css
+++ b/src/main/resources/styles.css
@@ -294,6 +294,18 @@ Sara Shakeel, gvk731, 11367521
     -fx-max-height: 40;
     -fx-min-height: 40;
 }
+
+.hyperLinkButton{
+
+        -fx-font-size: 20px;
+        -fx-min-width: 50;
+        -fx-max-height: 49;
+        -fx-min-height: 49;
+        -fx-text-fill: #3434cd;
+        -fx-font-weight: bold
+
+}
+
 .fontmenu {
     -fx-font-size: 15px;
     -fx-min-height: 45;
